# base_c

./: 02_02_hello_world.c  02_03_debug_c_program.c  03_02_data_types_char.c  03_04_variable.c  03_05_constant.c  03_06_operators.c  03_08_loop.c  04_01_function_base.c  04_02_proto_type.c  04_03_variable_types_and_scope.c  05_01_file_include.c  CMakeLists.txt  README.md
include/: factorial.h  time_utils.h
src/chapter03/: 01_data_types_int.c  03_data_types_float.c  07_condition.c
src/chapter04/: 04_varargs.c  05_recursion.c
src/chapter05/: 02_01_factorial.c  02_my_include_file.c  03_macro_function.c  04_conditional_macro.c  05_printlnf.c
src/chapter06/: 01_array_basics.c  02_array_limits.c  03_string.c  04_array_parameter.c  05_2d_array.c
src/chapter07/: 01_pointer_basics.c  02_readonly_pointer.c  03_dangerous_pointer_values.c  04_pointer_operations.c  05_lvalue_rvalue.c  06_pointer_parameter_as_return_value.c  07_dynamic_memory.c  08_function_pointer.c
src/chapter08/: 01_struct.c  02_memory_align.c  03_union.c  04_enum.c
src/chapter09/: 01_character_type.c  02_conversion.c  03_string_length_compare.c  04_find_char_and_substring.c  05_string_tokenize.c  06_string_concat_copy.c  07_men_op.c  08_restrict.c  09_safe_version.c  10_mbs_wcs.c
src/chapter10/: 01_base_time.c  02_get_sys_time.c  03_calendar.c  04_format_time.c  05_prase_time.c  06_time_diff.c
src/chapter11/: 01_io_basics.c  02_setbuf.c  03_read_write_a_character.c  04_copy_file.c  05_read_write_a_line.c  06_copy_file_2.c  07_read_write_certain_byte.c  08_serialization.c  09_copy_file_3.c  (+2 more)
